# TIG-energy

./: README.md  TIG_Level1_Solver_Notebook (4).ipynb  parameter_calibration.tex  repo_structure_plan.md  tig_challenge_improved.tex  tig_level_2_spec.tex
tig-algorithms/: Cargo.toml
tig-algorithms/energy_arbitrage/: mpc_dp.rs
tig-algorithms/examples/: congestion_tuning.rs  param_sweep.rs  range_sweep.rs  runner.rs  runner_v2.rs  track_experiments.rs
tig-algorithms/src/: lib.rs
tig-algorithms/src/energy_arbitrage_v2/: level2_decomposition.rs  level2_greedy.rs  mod.rs
tig-challenges/: Cargo.toml
tig-challenges/src/: energy_arbitrage.rs  energy_arbitrage_v2.rs  lib.rs
tig-challenges/src/energy_arbitrage_v2/baselines/: level2_greedy.rs
tig-energy-arbitrage/: Cargo.toml  README.md
tig-energy-arbitrage/tig-algorithms/energy_arbitrage/: template.rs
tig-energy-arbitrage/tig-algorithms/examples/: experiments.rs  runner_v2.rs
tig-energy-arbitrage/tig-algorithms/src/: lib.rs
tig-energy-arbitrage/tig-challenges/: Cargo.toml
tig-energy-arbitrage/tig-challenges/src/: energy_arbitrage_v2.rs
tig-monorepo/: repo_structure_plan.md
tig-monorepo/tig-algorithms/: Cargo.toml
tig-monorepo/tig-algorithms/src/: lib.rs
tig-monorepo/tig-algorithms/src/energy_arbitrage_v2/: mod.rs  (+1 more)
tig-monorepo/tig-binary/: Cargo.toml
tig-monorepo/tig-challenges/: Cargo.toml
tig-monorepo/tig-challenges/src/: lib.rs
tig-monorepo/tig-runtime/: Cargo.toml
tig-monorepo/tig-runtime/src/: main.rs
tig-monorepo/tig-verifier/: Cargo.toml
tig-monorepo/tig-verifier/src/: main.rs
(+11 files in other folders)
