[package]
name = "tig-challenges"
version = "0.1.0"
edition = "2021"
description = "TIG Challenge definitions for Energy Arbitrage"
license = "MIT"

[dependencies]
anyhow = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"


